[gd_scene load_steps=3 format=3 uid="uid://bbb0gur602cw7"]

[ext_resource type="Theme" uid="uid://cboyxbggkvdoj" path="res://7 GUI/Menus/Menu Elements/Menu Tres/Menu.tres" id="1_rt6m3"]
[ext_resource type="Script" uid="uid://b4ejw500dvd8p" path="res://7 GUI/Menus/Settings Menu/mouse_sens_slider.gd" id="2_lx615"]

[node name="MouseSens" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -29.5
offset_right = 106.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rt6m3")
script = ExtResource("2_lx615")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -25.5
offset_right = 106.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
columns = 2

[node name="MouseSens" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mouse Sensitivity "
horizontal_alignment = 1
vertical_alignment = 1

[node name="sensText" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "100"
alignment = 1
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
flat = true
select_all_on_focus = true

[node name="MouseSens Slider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0
step = 0.01
tick_count = 3
ticks_on_borders = true

[connection signal="focus_entered" from="VBoxContainer/CenterContainer/GridContainer/sensText" to="." method="_on_bus_edit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/CenterContainer/GridContainer/sensText" to="." method="_on_bus_edit_focus_exited"]
[connection signal="text_changed" from="VBoxContainer/CenterContainer/GridContainer/sensText" to="." method="_on_bus_edit_text_changed"]
[connection signal="drag_ended" from="VBoxContainer/MouseSens Slider" to="." method="_on_vol_slider_drag_ended"]
[connection signal="drag_started" from="VBoxContainer/MouseSens Slider" to="." method="_on_drag_started"]
[connection signal="mouse_exited" from="VBoxContainer/MouseSens Slider" to="." method="_on_mouse_exited"]
